fixed side scrollbar

--- a/styles.css
+++ b/styles.css
@@ -120,6 +120,8 @@ button {
 
 body {
   font-family: "Lato", sans-serif;
+  width: 100vw;
+  overflow-x: hidden;
 }
 
 .bodyContainer {
